<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/v_dark_grey"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/v_dark_grey"
        android:padding="10dp"
        android:text="@string/_1234567890"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:gravity="end|bottom"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/orange"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn8"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn9"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnDiv"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:textColor="@color/orange"
            android:onClick="onOperator"
            android:text="@string/div"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn5"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn6"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnMul"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onOperator"
            android:text="@string/mul"
            android:textColor="@color/orange"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn2"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btn3"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnSub"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:textColor="@color/orange"
            android:onClick="onOperator"
            android:text="@string/minus"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnClear"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onClear"
            android:text="@string/clr"
            android:textColor="@color/orange"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn0"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:textColor="@color/white"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnDot"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:textColor="@color/orange"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:onClick="onOperator"
            android:text="@string/add"
            android:textColor="@color/orange"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnEqual"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/v_dark_grey"
            android:textColor="@color/orange"
            android:onClick="onEqual"
            android:text="@string/equals"
            tools:ignore="UsingOnClickInXml"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>